<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="udacity_map">Udacity Map</string>
    <string name="udacity_logo">Udacity Logo</string>
    <string name="master_skills">Master in-demand skills. Build and design amazing projects. Earn a valued credential. Launch your career in Data Science, Machine Learning, Android, iOS, and more. Be in demand.</string>
    <string name="get_ready">Get Job Ready with Udacity</string>
    <string name="title">Udacity</string>
    <string name="address">2465 Latham St \nMountain View, CA 94043</string>
    <string name="number">650-555-5555</string>
</resources>
